<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2222" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/appName"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f61e3536" >

        <TextView
            android:id="@+id/novoGastoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="80dp"
            android:clickable="true"
            android:drawableTop="@drawable/novo_gasto"
            android:onClick="selecionarOpcao"
            android:text="@string/novoGastoTextView"
            android:textColor="#FFF"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/novaViagemTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/novoGastoTextView"
            android:layout_marginRight="50dp"
            android:clickable="true"
            android:drawableTop="@drawable/nova_viagem"
            android:onClick="selecionarOpcao"
            android:text="@string/novaViagemTextView"
            android:textColor="#FFF"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/minhasViagensTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/novoGastoTextView"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="120dp"
            android:clickable="true"
            android:drawableTop="@drawable/minhas_viagens"
            android:onClick="selecionarOpcao"
            android:text="@string/minhasViagensTextView"
            android:textColor="#FFF"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/configuracoesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/minhasViagensTextView"
            android:layout_alignRight="@id/novaViagemTextView"
            android:clickable="true"
            android:drawableTop="@drawable/configuracoes"
            android:onClick="selecionarOpcao"
            android:text="@string/configuracoesTextView"
            android:textColor="#FFF"
            android:textStyle="bold" />



    </RelativeLayout>

</LinearLayout>