<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingRight="20dp"
    android:paddingLeft="20dp" >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:src="@drawable/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuarioString" />
    
    <EditText
        android:id="@+id/usuarioEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" >

        <requestFocus/>
    </EditText>

    <TextView
        android:id="@+id/senhaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senhaTextView"/>

    <EditText
        android:id="@+id/senhaEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/logarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logarButton"
        android:onClick="logarOnClick" />

</LinearLayout>
